2014-10-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 3.2.0
	* Fix some Spanish labels
	* Fix reference to .xml language file
	* Remove reference to version of TYPO3 before 6.2
	* Move tasks to Classes/Task folder
	* Migrate references to core classes to namespaced names

2014-03-30  Stanislas Rolland  <typo3@sjbr.ca>

	* Add missing label
	* Fix use of deprecated method

2014-03-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Move TypoScript configuration to Configuration and Resources folders
	* Move music files to Resources/Public/Audio folder
	* Move font files to Resources/Private/Fonts folder
	* Move html email stylesheet Resources/Private/StyleSheets folder
	* Move table configuration to Configuration/TCA folder
	* Require TYPO3 6.2
	* Convert pi1/locallang.xml to xlf and copy to Resources/Private/Language folder
	* Convert locallang_db.xml to xlf and move to Resources/Private/Language folder
	* Convert locallang.xml to xlf and merge to Resources/Private/Language folder
	* Convert mod1/locallang.xml and mod1/locallang_mod.xml to xlf and merge into Resources/Private/Language folder
	* Move images to Resources/Public/Images

2014-03-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix charset setting for emails set in deferred mode
	* Update version to 3.1.0

2014-03-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #57101: Fatal Error on Execution of Scheduler Task

2014-03-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Remove reference to deprecated method
	* Fix informal salutation in TYPO3 4.6+

2014-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56202: Some links are wrong when absRefPrefix is configured
	* Resolves #42339: Text-Mails are wrong
	* Add warning in TS constants and manual regarding domain of site email address
	* Enable in TYPO3 6.2

2012-06-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #37866: Incorrect localization of informal labels
	* Version 3.0.1

2012-05-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Update manual